@@ -26,7 +26,7 @@ Rob Browning <rlb@cs.utexas.edu> abused everyone for not using perl,
    infrastructure, is handling the whole guile/perl extension language 
    thing, and is dealing with configuration & configurability.
 
-Dave Peticolas <peticola@cs.ucdavis.edu> hacks obsessively on
+Dave Peticolas <dave@krondo.com> hacks obsessively on
    GnuCash. But he can stop anytime he wants to. Really.
 
 Bill Gribble <grib@billgribble.com> works magic. If your checks print
@@ -60,6 +60,7 @@ Hubert Figuiere <hfiguiere@teaser.fr> patch to gnc-prices
 Jan-Uwe Finck <ju_finck@mail.netwave.de> for German message translation
 Ron Forrester <rjf@aracnet.com> for gnome patches
 Dave Freese <DFreese@osc.uscg.mil> for leap-year fix
+John Goerzen <jgoerzen@complete.org> file i/o fix for 64-bit architectures
 Bill Gribble <grib@billgribble.com> qif importation code
 Otto Hammersmith <otto@bug.redhat.com> for RedHat RPM version
 Eric Hanchrow <offby1@blarg.net> updated currency documentation
@@ -79,12 +80,12 @@ Heath Martin <martinh@pegasus.cc.ucf.edu> gnome patches, major register work
 Matt Martin <mgmartin@abacusnet.net> guile error handling code
 Robert Graham Merkel <rgmerk@mira.net> reporting, gnome, and config patches
 Tim Mooney <mooney@dogbert.cc.ndsu.NoDak.edu> port to alpha-dec-osf4.0f
-G. Allen Morris III  <gam3@ann.softgams.com> for QIF core dump 
+G. Allen Morris III <gam3@ann.softgams.com> for QIF core dump 
 Brent Neal <brent@baton.phys.lsu.edu> TIAA-CREF support.
 Peter Norton <spacey@inch.com> for a valiant attempt at a GTK port
 OmNiBuS <webmaster@obsidian.uia.net> web site graphics & content
 Myroslav Opyr <mopyr@IPM.Lviv.UA> for misc patches
-Dave Peticolas <peticola@morpheus.cs.ucdavis.edu> extensive intelligent patches
+Dave Peticolas <dave@krondo.com> extensive intelligent patches
 Laurent P{'e}lecq <laurent.pelecq@wanadoo.fr> i18n patches with gettext
 Alain Peyrat <Alain.Peyrat@nmu.alcatel.fr> for configure.in patches
 Peter Pointner <peter@wuzel.m.isar.de> QIF import fixes, Qt patches
